--- a/assets/Style/style.css
+++ b/assets/Style/style.css
@@ -228,8 +228,6 @@ body {
         transform: translateX(0);
     }
 }
-
-
 .footer-container {
     background-color: #101214;
     position: absolute;
@@ -266,7 +264,7 @@ body {
     max-width: 80%;
     color: #f1f1f1;
     text-align: justify;
-    overflow: hidden;
+    overflow: auto;
     .imgBox {
         border: 1px solid #E53A1F;
         width: 60%;
